--- a/xla.html
+++ b/xla.html
@@ -312,6 +312,7 @@
             <h1>🔍 Xử Lý Ảnh Cây Trồng</h1>
             <div class="button-container">
                 <button onclick="detectDisease()">🦠 Phát hiện bệnh</button>
+                <button onclick="window.location.href='testxla.php'">Chuyển sang PHP</button>
                 <button onclick="analyzeColor()">🌿 Phân tích màu sắc lá</button>
                 <button onclick="identifyPlant()">🌾 Nhận diện loại cây</button>
                 <button onclick="trackGrowth()">📊 Theo dõi phát triển</button>
